<resources>
    <string name="app_name">Vinyls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_usuario">VISITANTE</string>
    <string name="texto_coleccionista">COLECCIONISTA</string>
    <string name="texto_coleccionista_lowcase">Coleccionista</string>
    <string name="texto_albumes_lowcase">Álbumes</string>
    <string name="texto_musician_lowcase">Artistas</string>
    <string name="texto_collector_lowcase">Coleccionistas</string>
    <string name="texto_visitante_lowcase">Visitante</string>
    <string name="text_usuario">VISITANTE</string>
    <string name="text_album_genero">Género</string>
    <string name="text_collector_telephone">Teléfono</string>
    <string name="text_collector_email">Correo</string>
    <string name="text_album_fecha">Fecha</string>
    <string name="text_album_descripcion">Descripción</string>
    <string name="texto_viniloApp">ViniloApp</string>
    <string name="texto_visitante">visitante</string>
    <string name="text_album">Álbumes</string>
    <string name="text_artista">"Artista</string>
    <string name="c_mo_deseas_ingresar">¿Cómo deseas ingresar?</string>
    <string name="bienvenid_a">Bienvenid@ a</string>
    <string name="albums_string">Álbumes</string>
    <string name="crear_album_string">Crear Álbum</string>
    <string name="artistas_string">Artistas</string>
    <string name="coleccionistas_string">Coleccionistas</string>
    <string name="ir_a_home">Ir a home</string>
    <string name="imagen_album">Imagen álbum</string>
    <string name="nombre_label">Nombre</string>
    <string name="name_create_album">Nombre</string>
    <string name="portada_create_album">URL Portada</string>
    <string name="release_date_create_album">Fecha de lanzamiento</string>
    <string name="description_create_album">Descripción</string>
    <string name="toggle_salsa">Salsa</string>
    <string name="toggle_rock">Rock</string>
    <string name="toggle_folk">Folk</string>
    <string name="text_view_genre_create_album">Género</string>
    <string name="recordLabel_create_album">Discográfica</string>
    <string name="button_create_album">Crear</string>
    <string name="create_album_label">Crear álbum</string>
    <string name="required">Requerido</string>
    <string name="sony_music_label">Sony Music</string>
    <string name="emi_label">EMI</string>
    <string name="discos_fuentes_label">Discos Fuentes</string>
    <string name="elektra_label">Elektra</string>
    <string name="fania_records_label">Fania Records</string>


</resources>