<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    tools:background="@color/background_general"
    tools:context=".view.FragmentAlbumCreate">


    <TextView
        android:id="@+id/tvLabelCreateAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_album_label"
        android:textAlignment="center"
        android:textColor="@color/fontTextNormal"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutCreateAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCreateAlbum">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiNameCreateAlbum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_create_album"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameCreateAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCoverCreateAlbum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/portada_create_album"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCoverCreateAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiReleaseDateCreateAlbum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/release_date_create_album"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReleaseDateCreateAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDescriptionCreateAlbum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_create_album"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptionCreateAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRecordLabelCreateAlbum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recordLabel_create_album"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecordLabelCreateAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvGenreCreateAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_view_genre_create_album"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tbGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <Button
                android:id="@+id/btnSalsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_salsa"
                app:backgroundTint="@color/backgroungButton"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/btnRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_rock"
                app:backgroundTint="@color/backgroungButton"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/btnFolk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_folk"
                app:backgroundTint="@color/backgroungButton"
                style="?attr/materialButtonOutlinedStyle"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>

    <Button
        android:id="@+id/btnSendAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_general"
        android:text="@string/button_create_album"
        android:textColor="@color/fontTextButton"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCreateAlbum" />


</androidx.constraintlayout.widget.ConstraintLayout>