<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMenuCollector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_general"
    tools:context=".view.FragmentMenuColeccionista">


    <TextView
        android:id="@+id/textViewCollector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/texto_coleccionista_lowcase"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAlbums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:background="@drawable/button_general"
        android:text="@string/albums_string"
        android:textColor="@color/fontTextButton"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCollector" />

    <Button
        android:id="@+id/buttonCreateAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_general"
        android:text="@string/crear_album_string"
        android:textColor="@color/fontTextButton"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAlbums"
        app:layout_constraintVertical_bias="0.232" />

</androidx.constraintlayout.widget.ConstraintLayout>